--- a/styles/_elements.scss
+++ b/styles/_elements.scss
@@ -16,7 +16,7 @@ body {
   border-bottom: 1px solid $page-divider;    	
 	}
 	
-.page:nth-child(even) {background: #fff url("../img/backgroundx.png");}
+.page:nth-child(odd) {background: #fff url("../img/backgroundx.png");}
 .page:nth-child(even) {background: $page-color-light url("../img/backgroundx.png");}
 	
 .jumpto {
