--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -6,7 +6,7 @@ $page-color-dark: rgba(0,0,0,0.025);
 $page-color-dark: rgba(235,235,235,1);
 $page-color-light: rgba(255,255,255,1);
 
-$page-divider: $page-color-light;
+$page-divider: $page-color-dark;
 
 $button-color: rgba(36,148,209,1);
 $button-text-color: rgba(36,148,209,1);
