--- a/styles/main-slow2.css
+++ b/styles/main-slow2.css
@@ -473,7 +473,7 @@ body {
 .page {
   width: 768px;
   height: 1024px;
-  border-bottom: 1px solid white; }
+  /*   border-bottom: 2px solid $page-divider;  */ }
 
 .page:nth-child(odd) {
   background: #fff; }
