--- a/styles/_elements.scss
+++ b/styles/_elements.scss
@@ -17,7 +17,7 @@ body {
 	}
 	
 .page:nth-child(odd) {background: #fff;}
-.page:nth-child(even) {background: $page-color-light;}
+.page:nth-child(even) {background: $page-color-dark;}
 	
 .jumpto {
   bottom:25px;
