--- a/styles/main-slow2.css
+++ b/styles/main-slow2.css
@@ -479,7 +479,7 @@ body {
   background: #fff; }
 
 .page:nth-child(even) {
-  background: white; }
+  background: #ebebeb; }
 
 .jumpto {
   bottom: 25px;
