--- a/styles/main.scss
+++ b/styles/main.scss
@@ -293,7 +293,7 @@ $last_scrollstart:      $last_onscreen + 900;
   #{$progress_section_begin} {
     background:blue;}
   #{$progress_section_end} {
-    background:pink;}
+    background:lime;}
   }
   
   
