--- a/styles/_type.scss
+++ b/styles/_type.scss
@@ -12,6 +12,7 @@ html, body, div, span, p, a, del, em, img, ol, ul, li, fieldset, form, label {
   line-height: 1;
 	font-family:$sans-type;
   text-align: left;
+  color: $text-color;
   }
 
 ol, ul {
@@ -44,7 +45,8 @@ q {
   }
 
 h1 {
-	font-size:6em;
+	font-size:12em;
+	margin: 0;
 	padding:25px;
 	color:rgba(0,255,0,1);
 	top:500px;
@@ -56,10 +58,9 @@ h1 {
   }
 
 h2 {
-	color:inherit;
 	font-size:4em;
-	margin:2em 0 1em 0;
-  padding:50px;
+	margin: 0;
+	padding:25px;
 	-webkit-transform-origin:0 0;
 	-moz-transform-origin:0 0;
 	-ms-transform-origin:0 0;
@@ -67,32 +68,17 @@ h2 {
 	transform-origin:0 0;
   }
 
-h2:first-child {margin-top:0;}
-
 h3 {
-	color:#333;
-	font-size:1.41em;
-	margin:1em 0;
+	font-size:2em;
+	margin: 0;
+	padding:25px;
+	-webkit-transform-origin:0 0;
+	-moz-transform-origin:0 0;
+	-ms-transform-origin:0 0;
+	-o-transform-origin:0 0;
+	transform-origin:0 0;;
   }
 
-h4 {
-	color:#444;
-	font-size:1.11em;
-	margin:1em 0;
-  }
-
-#transform {
-	text-align:center;
-	font-size:150%;
-  }
-
-#properties {
-	text-align:center;
-  }
-
-.drop {
-	font-weight:bold;
-  }
 
 /*** End Type Styles ********************************************************/
 
